--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <script src="https://cdn.plot.ly/plotly-2.25.2.min.js" charset="utf-8"></script>
-        <script type="module" src="graph.mjs"></script>
-    </head>
-    <body>
-        <div id="graph"></div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Geospatial Analysis</title>
+    <style>
+      /* Global Styles */
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 40px;
+        color: #333;
+        background-color: #f8f9fa;
+        line-height: 1.6;
+      }
+
+      /* Headers */
+      h1,
+      h2,
+      h3,
+      h4 {
+        margin-bottom: 20px;
+      }
+      h1 {
+        color: #0056b3;
+      }
+      h2,
+      h3 {
+        color: #007bff;
+      }
+
+      /* Sections */
+      .section {
+        margin-bottom: 40px;
+        padding: 20px;
+        background-color: #ffffff;
+        border-radius: 5px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+      }
+
+      /* Buttons */
+      .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 20px 0;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      .btn:hover {
+        background-color: #0056b3;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+
+      /* Additional Enhancements */
+      p {
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Geospatial Analysis of Airbnb Listings in Seattle</h1>
+    <!-- Hypothesis Testing on Listing Prices Section -->
+    <div class="section">
+      <h2>Hypothesis Testing on Listing Prices</h2>
+      <p>
+        Are Airbnb Prices in Seattle Truly Random? Unraveling the Hidden
+        Patterns of Price Distribution Across the City.
+      </p>
+      <a href="hypothesis_testing.html" class="btn"
+        >Detailed Hypothesis Testing</a
+      >
+    </div>
+    <!-- Interactive Map Section -->
+    <div class="section">
+      <h2>Interactive Map of Listings</h2>
+      <p>
+        Navigate the interactive map to see the spatial distribution of Airbnb
+        listings across Seattle. Zoom, pan, and click on markers to get more
+        details about individual listings.
+      </p>
+      <a href="map.html" class="btn">Explore Interactive Map</a>
+    </div>
+
+    <!-- General Statistics Section -->
+    <div class="section">
+      <h2>General Statistics on Listings</h2>
+      <p>
+        Delve into key statistics about Airbnb listings in Seattle. From price
+        distributions to the popularity of neighborhoods, get a comprehensive
+        overview of the data.
+      </p>
+      <a href="general_stats.html" class="btn">View Listing Statistics</a>
+    </div>
+  </body>
 </html>
